fixed alignment

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,22 +2,25 @@
   font-family: monospace;
   background: papayawhip;
   display: flex; 
-  padding: 12px;
+  align-items: center;
 }
 
 .logo {
-  margin: auto;
+  margin: 0 auto;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 0px 32px;
+  margin: 8px;
 }
 
 ul {
   display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 a {
